--- a/templates/ha/index.html
+++ b/templates/ha/index.html
@@ -95,11 +95,21 @@
                 </div>
             </div>
         </div>
-        <div class="col s6">
+        <div class="col s3">
             <div class="card-panel">
                 <div class="card-content">
                     <span class="card-title">Wie viele Einträge gibt es?</span>
                     <h1>{{ total_entries }}</h1>
+                </div>
+            </div>
+        </div>
+        <div class="col s3">
+            <div class="card-panel">
+                <div class="card-content">
+                    <span class="card-title">Welcher Autor war diesen Monat am aktivsten?</span>
+
+                    <h1>{{ most_active_author }}</h1>
+                    <span>({{ most_active_author_entries }} Einträge)</span>
                 </div>
             </div>
         </div>
@@ -116,18 +126,18 @@
             <table class="responsive-table highlight">
                 <thead>
                 <tr>
+                    <th>Fach</th>
                     <th>Aufgabe</th>
                     <th>Bis</th>
-                    <th>Fach</th>
                 </tr>
                 </thead>
 
                 <tbody>
                 {% for entry in entrys %}
                     <tr data-href="details/{{ entry.id }}">
+                        <td>{{ entry.subject }}</td>
                         <td><a href="details/{{ entry.id }}">{{ entry.preview }}</a></td>
                         <td>{{ entry.date_until }}</td>
-                        <td>{{ entry.subject }}</td>
                     </tr>
                 {% endfor %}
                 </tbody>
