--- a/templates/ha/index.html
+++ b/templates/ha/index.html
@@ -106,7 +106,7 @@
         <div class="col s3">
             <div class="card-panel">
                 <div class="card-content">
-                    <span class="card-title">Welcher Autor war diesen Monat am aktivsten?</span>
+                    <span class="card-title">Welcher Autor war in diesem Monat am aktivsten?</span>
 
                     <h1>{{ most_active_author }}</h1>
                     <span>({{ most_active_author_entries }} Einträge)</span>
