--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -20,7 +20,8 @@
     <div class="section">
         <h2>Über mich</h2>
         <p id="about-text">
-            Ich bin eine kohlenstoffbasierte Lebensform der Gattung <i>Mensch</i>. Ich bin 13yo. In meiner Freizeit <code>["programmiere", "entwickle", "bastle", "tue", "erschaffe", "zerstöre"]</code> ich Zeugs.
+            Ich bin eine kohlenstoffbasierte Lebensform der Gattung <i>Mensch</i>. Ich bin 13yo.
+            In meiner Freizeit <code>["programmiere", "entwickle", "bastle", "tue", "erschaffe", "zerstöre"]</code> ich Zeugs.
         </p>
     </div>
     <div class="divider"></div>
